data/derived/comb/progs/unify/prog0366.ml.out
Characters 0-3:
  log -1.0;;
  ^^^
Error: This expression has type float -> float
       but an expression was expected of type int
